--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pyrealsense2 == 2.54.2.5684
 numpy == 1.26.1
 opencv-python == 4.8.1.78
 mysql-connector-python == 8.0.33
+pygame == 2.5.2
 
 # speechrecognition
 # pyaudio
