Update before CN

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy == 1.26.1
 opencv-python == 4.8.1.78
 mysql-connector-python == 8.0.33
 pygame == 2.5.2
-
+tensorboard
 # speechrecognition
 # pyaudio
 # pyttsx3
